# pharaohound

./: .gitignore  LICENSE  README.md  TO_DO.md  claude_instruction  pharaohound.py  pyproject.toml  test_vars.json
pharaohound/: __init__.py  __main__.py  attack_paths.py  cli.py  graph.py  intelligence.py  logging_setup.py  models.py  noob.py  parsers.py  reachability.py  recommendations.py  shell.py  tactical.py  theme.py  update.py
pharaohound/analyzers/: __init__.py  acl_abuse.py  ad_architecture.py  adcs.py  asrep.py  azure.py  azure_advanced.py  base.py  dcsync.py  delegation.py  gmsa.py  gpo_abuse.py  high_value.py  honeytoken.py  infrastructure.py  kerberoast.py  kerberos_advanced.py  laps.py  laps_gpp.py  local_admin.py  maq.py  os_vulns.py  password_policy.py  persistence.py  pre_w2k.py  registry.py  self_add_group.py  sessions.py  shadow_creds.py  sid_history.py  ticket_forging.py  trusts.py
pharaohound/collector/: __init__.py  collector.py  enumerators.py  ldap_client.py  output.py  resolver.py
pharaohound/modules/: __init__.py  add_members.py  add_self.py  all_extended_rights.py  base.py  contains.py  dcsync.py  force_change_password.py  generic_all.py  generic_write.py  get_changes.py  member_of.py  owns.py  read_gmsa_password.py  registry.py  write_dacl.py  write_owner.py
pharaohound/reporters/: __init__.py  console.py  html.py  text.py
testCase/: bloodhound.js_20260617123100_cas.json  bloodhound.js_20260617123100_computers.json  bloodhound.js_20260617123100_groups.json  bloodhound.js_20260617123100_users.json
tests/: test_analysis.py
