[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharaohound"
version = "1.0.0"
authors = [
    { name = "Asbawy" }
]
description = "A streaming, concurrent, modular BloodHound JSON analysis engine"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ijson>=3.1",
    "rich>=13.0",
]

[project.scripts]
pharaohound = "pharaohound.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pharaohound*"]
